Cleanup tmp files, WIP sync

--- a/tools/ansible/run-scenario.yaml
+++ b/tools/ansible/run-scenario.yaml
@@ -66,6 +66,23 @@
       set_fact:
         raiden_ports: "{{ dirs.files | map(attribute='path') | map('basename') | list }}"
 
+    - name: remove all state information
+      file:
+        path: "{{ user_home }}/state"
+        state: absent
+
+    - name: create state directory
+      file:
+        path: "{{ user_home }}/state"
+        state: directory
+
+    - name: remove stage files
+      file:
+        path: "{{ user_home }}/raiden-{{ item }}.stage*"
+        state: absent
+      with_items:
+        - "{{ raiden_ports }}"
+
     # TODO: create directory, get timestamp, save adding timestamp to bak name
     #- name: backup old raiden log files
     #  command: "mv -f {{ user_home }}/raiden-{{ item }}.log {{ user_home }}/raiden-{{ item }}.bak"
@@ -78,13 +95,6 @@
         chdir: "{{ raiden_dir }}"
       when: force_pull is defined
 
-    - name: remove stage files
-      file:
-        path: "{{ user_home }}/raiden-{{ item }}.stage*"
-        state: absent
-      with_items:
-        - "{{ raiden_ports }}"
-
     - name: execute raidens asynchronously
       shell:
         cmd: "{{ ansible_env.HOME }}/raidenvenv/bin/python {{ scenario_runner }} $(cat {{ ansible_env.HOME }}/raiden_flags.txt) --privatekey $(cat {{ ansible_env.HOME }}/{{ item }}/privatekey.txt) --listen_address {{ ansible_ec2_local_ipv4 }}:{{ item }} --scenario {{ ansible_env.HOME }}/{{ item }}/scenario.json --logfile raiden-{{ item }}.log --stage_prefix=raiden-{{ item }}"
@@ -95,11 +105,17 @@
         - "{{ raiden_ports }}"
 
     # TODO: synchronizes a single host, check synchronizing multiple hosts...
+
     - name: wait for raidens initialization (this may take a long time...)
       wait_for:
         path: "{{ user_home }}/raiden-{{ item }}.stage1"
       with_items:
         - "{{ raiden_ports }}"
+
+    - name: publicize information that all nodes are ready
+      file: path="{{ user_home }}/state/{{ ansible_ec2_local_ipv4 }}.stage1" state=touch
+
+    # TODO: synchronize between states, and wait for all to be ready
 
     - name: signal all nodes to start sending messages
       shell:
