fail fast, integration after unit tests #159

--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,8 @@ deps =
     -rrequirements.txt
     pdbpp
 commands =
-    py.test --blockchain-type=tester {posargs}
+    py.test --blockchain-type=tester --exitfirst --ignore tests/test_webui.py --ignore tests/integration {posargs}
+    py.test --blockchain-type=tester --exitfirst --ignore tests/test_webui.py tests/integration {posargs}
 
 [testenv]
 changedir = {toxinidir}/raiden
@@ -18,9 +19,9 @@ deps =
     -rrequirements.txt
     coverage==4.0
 commands =
-    py.test --ignore raiden/tests/test_webui.py {posargs}
-    py.test --blockchain-type=tester {posargs}
-    coverage run --source raiden --branch -m py.test --ignore raiden/tests/test_webui.py {posargs}
+    py.test --exitfirst --ignore tests/test_webui.py --ignore tests/integration {posargs}
+    py.test --exitfirst --ignore tests/test_webui.py tests/integration {posargs}
+    coverage run --source raiden --branch -m py.test --ignore tests/test_webui.py {posargs}
 
 [testenv:coverage]
 basepython = python2.7
