--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ before_install:
 - chmod +x ~/.bin/solc
 - export PATH=$PATH:~/.bin
 install:
+- pip install pycparser==2.14
 - pip install -r requirements.txt
 - pip install coveralls
 notifications:
