build running pep8

--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,9 @@ changedir = {toxinidir}/raiden
 deps =
     -rrequirements.txt
     pdbpp
+    pep8
 commands =
+    pep8 --exclude .eggs,.tox,devenv,tools/ansible .
     py.test --blockchain-type=tester --exitfirst --ignore tests/test_webui.py --ignore tests/integration {posargs}
     py.test --blockchain-type=tester --exitfirst --ignore tests/test_webui.py tests/integration {posargs}
 
@@ -18,7 +20,9 @@ changedir = {toxinidir}/raiden
 deps =
     -rrequirements.txt
     coverage==4.0
+    pep8
 commands =
+    pep8 --exclude .eggs,.tox,devenv,tools/ansible .
     py.test --exitfirst --ignore tests/test_webui.py --ignore tests/integration {posargs}
     py.test --exitfirst --ignore tests/test_webui.py tests/integration {posargs}
     coverage run --source raiden --branch -m py.test --ignore tests/test_webui.py {posargs}
