running flake8 instead of pep8

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,coverage,flake8
+envlist = py27,coverage
 
 [testenv:devenv]
 envdir = devenv
@@ -9,9 +9,9 @@ changedir = {toxinidir}/raiden
 deps =
     -rrequirements.txt
     pdbpp
-    pep8
+    flake8
 commands =
-    pep8 --exclude .eggs,.tox,devenv,tools/ansible .
+    flake8 .
     py.test --blockchain-type=tester --exitfirst --ignore tests/test_webui.py --ignore tests/integration {posargs}
     py.test --blockchain-type=tester --exitfirst --ignore tests/test_webui.py tests/integration {posargs}
 
@@ -20,9 +20,9 @@ changedir = {toxinidir}/raiden
 deps =
     -rrequirements.txt
     coverage==4.0
-    pep8
+    flake8
 commands =
-    pep8 --exclude .eggs,.tox,devenv,tools/ansible .
+    flake8 .
     py.test --exitfirst --ignore tests/test_webui.py --ignore tests/integration {posargs}
     py.test --exitfirst --ignore tests/test_webui.py tests/integration {posargs}
     coverage run --source raiden --branch -m py.test --ignore tests/test_webui.py {posargs}
@@ -32,9 +32,3 @@ basepython = python2.7
 skip_install = True
 deps = coverage==4.0
 commands = coverage report --show-missing
-
-[testenv:flake8]
-basepython = python2.7
-skip_install = True
-deps = flake8==2.4.1
-commands = flake8 raiden
