--- a/raiden/Makefile
+++ b/raiden/Makefile
@@ -4,15 +4,16 @@
 # You can set these variables from the command line.
 SPHINXOPTS    =
 SPHINXBUILD   = sphinx-build
+SPHINXAPIDOC  = sphinx-apidoc
 PAPER         =
-BUILDDIR      = build
+BUILDDIR      = ../docs/_build
 
 # Internal variables.
 PAPEROPT_a4     = -D latex_paper_size=a4
 PAPEROPT_letter = -D latex_paper_size=letter
-ALLSPHINXOPTS   = -d $(BUILDDIR)/doctrees $(PAPEROPT_$(PAPER)) $(SPHINXOPTS) docs_source
+ALLSPHINXOPTS   = -d $(BUILDDIR)/doctrees $(PAPEROPT_$(PAPER)) $(SPHINXOPTS) ../docs
 # the i18n builder cannot share the environment and doctrees with the others
-I18NSPHINXOPTS  = $(PAPEROPT_$(PAPER)) $(SPHINXOPTS) docs_source
+I18NSPHINXOPTS  = $(PAPEROPT_$(PAPER)) $(SPHINXOPTS) ../docs
 
 .PHONY: help
 help:
@@ -50,36 +51,42 @@ clean:
 
 .PHONY: html
 html:
+	$(SPHINXAPIDOC) -o $(BUILDDIR)/generated ..
 	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
 	@echo
 	@echo "Build finished. The HTML pages are in $(BUILDDIR)/html."
 
 .PHONY: dirhtml
 dirhtml:
+	$(SPHINXAPIDOC) -o $(BUILDDIR)/generated ..
 	$(SPHINXBUILD) -b dirhtml $(ALLSPHINXOPTS) $(BUILDDIR)/dirhtml
 	@echo
 	@echo "Build finished. The HTML pages are in $(BUILDDIR)/dirhtml."
 
 .PHONY: singlehtml
 singlehtml:
+	$(SPHINXAPIDOC) -o $(BUILDDIR)/generated ..
 	$(SPHINXBUILD) -b singlehtml $(ALLSPHINXOPTS) $(BUILDDIR)/singlehtml
 	@echo
 	@echo "Build finished. The HTML page is in $(BUILDDIR)/singlehtml."
 
 .PHONY: pickle
 pickle:
+	$(SPHINXAPIDOC) -o $(BUILDDIR)/generated ..
 	$(SPHINXBUILD) -b pickle $(ALLSPHINXOPTS) $(BUILDDIR)/pickle
 	@echo
 	@echo "Build finished; now you can process the pickle files."
 
 .PHONY: json
 json:
+	$(SPHINXAPIDOC) -o $(BUILDDIR)/generated ..
 	$(SPHINXBUILD) -b json $(ALLSPHINXOPTS) $(BUILDDIR)/json
 	@echo
 	@echo "Build finished; now you can process the JSON files."
 
 .PHONY: htmlhelp
 htmlhelp:
+	$(SPHINXAPIDOC) -o $(BUILDDIR)/generated ..
 	$(SPHINXBUILD) -b htmlhelp $(ALLSPHINXOPTS) $(BUILDDIR)/htmlhelp
 	@echo
 	@echo "Build finished; now you can run HTML Help Workshop with the" \
@@ -87,6 +94,7 @@ htmlhelp:
 
 .PHONY: qthelp
 qthelp:
+	$(SPHINXAPIDOC) -o $(BUILDDIR)/generated ..
 	$(SPHINXBUILD) -b qthelp $(ALLSPHINXOPTS) $(BUILDDIR)/qthelp
 	@echo
 	@echo "Build finished; now you can run "qcollectiongenerator" with the" \
@@ -97,6 +105,7 @@ qthelp:
 
 .PHONY: applehelp
 applehelp:
+	$(SPHINXAPIDOC) -o $(BUILDDIR)/generated ..
 	$(SPHINXBUILD) -b applehelp $(ALLSPHINXOPTS) $(BUILDDIR)/applehelp
 	@echo
 	@echo "Build finished. The help book is in $(BUILDDIR)/applehelp."
@@ -106,6 +115,7 @@ applehelp:
 
 .PHONY: devhelp
 devhelp:
+	$(SPHINXAPIDOC) -o $(BUILDDIR)/generated ..
 	$(SPHINXBUILD) -b devhelp $(ALLSPHINXOPTS) $(BUILDDIR)/devhelp
 	@echo
 	@echo "Build finished."
@@ -116,18 +126,21 @@ devhelp:
 
 .PHONY: epub
 epub:
+	$(SPHINXAPIDOC) -o $(BUILDDIR)/generated ..
 	$(SPHINXBUILD) -b epub $(ALLSPHINXOPTS) $(BUILDDIR)/epub
 	@echo
 	@echo "Build finished. The epub file is in $(BUILDDIR)/epub."
 
 .PHONY: epub3
 epub3:
+	$(SPHINXAPIDOC) -o $(BUILDDIR)/generated ..
 	$(SPHINXBUILD) -b epub3 $(ALLSPHINXOPTS) $(BUILDDIR)/epub3
 	@echo
 	@echo "Build finished. The epub3 file is in $(BUILDDIR)/epub3."
 
 .PHONY: latex
 latex:
+	$(SPHINXAPIDOC) -o $(BUILDDIR)/generated ..
 	$(SPHINXBUILD) -b latex $(ALLSPHINXOPTS) $(BUILDDIR)/latex
 	@echo
 	@echo "Build finished; the LaTeX files are in $(BUILDDIR)/latex."
@@ -136,6 +149,7 @@ latex:
 
 .PHONY: latexpdf
 latexpdf:
+	$(SPHINXAPIDOC) -o $(BUILDDIR)/generated ..
 	$(SPHINXBUILD) -b latex $(ALLSPHINXOPTS) $(BUILDDIR)/latex
 	@echo "Running LaTeX files through pdflatex..."
 	$(MAKE) -C $(BUILDDIR)/latex all-pdf
@@ -143,6 +157,7 @@ latexpdf:
 
 .PHONY: latexpdfja
 latexpdfja:
+	$(SPHINXAPIDOC) -o $(BUILDDIR)/generated ..
 	$(SPHINXBUILD) -b latex $(ALLSPHINXOPTS) $(BUILDDIR)/latex
 	@echo "Running LaTeX files through platex and dvipdfmx..."
 	$(MAKE) -C $(BUILDDIR)/latex all-pdf-ja
@@ -150,18 +165,21 @@ latexpdfja:
 
 .PHONY: text
 text:
+	$(SPHINXAPIDOC) -o $(BUILDDIR)/generated ..
 	$(SPHINXBUILD) -b text $(ALLSPHINXOPTS) $(BUILDDIR)/text
 	@echo
 	@echo "Build finished. The text files are in $(BUILDDIR)/text."
 
 .PHONY: man
 man:
+	$(SPHINXAPIDOC) -o $(BUILDDIR)/generated ..
 	$(SPHINXBUILD) -b man $(ALLSPHINXOPTS) $(BUILDDIR)/man
 	@echo
 	@echo "Build finished. The manual pages are in $(BUILDDIR)/man."
 
 .PHONY: texinfo
 texinfo:
+	$(SPHINXAPIDOC) -o $(BUILDDIR)/generated ..
 	$(SPHINXBUILD) -b texinfo $(ALLSPHINXOPTS) $(BUILDDIR)/texinfo
 	@echo
 	@echo "Build finished. The Texinfo files are in $(BUILDDIR)/texinfo."
@@ -170,6 +188,7 @@ texinfo:
 
 .PHONY: info
 info:
+	$(SPHINXAPIDOC) -o $(BUILDDIR)/generated ..
 	$(SPHINXBUILD) -b texinfo $(ALLSPHINXOPTS) $(BUILDDIR)/texinfo
 	@echo "Running Texinfo files through makeinfo..."
 	make -C $(BUILDDIR)/texinfo info
@@ -177,18 +196,21 @@ info:
 
 .PHONY: gettext
 gettext:
+	$(SPHINXAPIDOC) -o $(BUILDDIR)/generated ..
 	$(SPHINXBUILD) -b gettext $(I18NSPHINXOPTS) $(BUILDDIR)/locale
 	@echo
 	@echo "Build finished. The message catalogs are in $(BUILDDIR)/locale."
 
 .PHONY: changes
 changes:
+	$(SPHINXAPIDOC) -o $(BUILDDIR)/generated ..
 	$(SPHINXBUILD) -b changes $(ALLSPHINXOPTS) $(BUILDDIR)/changes
 	@echo
 	@echo "The overview file is in $(BUILDDIR)/changes."
 
 .PHONY: linkcheck
 linkcheck:
+	$(SPHINXAPIDOC) -o $(BUILDDIR)/generated ..
 	$(SPHINXBUILD) -b linkcheck $(ALLSPHINXOPTS) $(BUILDDIR)/linkcheck
 	@echo
 	@echo "Link check complete; look for any errors in the above output " \
@@ -196,30 +218,35 @@ linkcheck:
 
 .PHONY: doctest
 doctest:
+	$(SPHINXAPIDOC) -o $(BUILDDIR)/generated ..
 	$(SPHINXBUILD) -b doctest $(ALLSPHINXOPTS) $(BUILDDIR)/doctest
 	@echo "Testing of doctests in the sources finished, look at the " \
 	      "results in $(BUILDDIR)/doctest/output.txt."
 
 .PHONY: coverage
 coverage:
+	$(SPHINXAPIDOC) -o $(BUILDDIR)/generated ..
 	$(SPHINXBUILD) -b coverage $(ALLSPHINXOPTS) $(BUILDDIR)/coverage
 	@echo "Testing of coverage in the sources finished, look at the " \
 	      "results in $(BUILDDIR)/coverage/python.txt."
 
 .PHONY: xml
 xml:
+	$(SPHINXAPIDOC) -o $(BUILDDIR)/generated ..
 	$(SPHINXBUILD) -b xml $(ALLSPHINXOPTS) $(BUILDDIR)/xml
 	@echo
 	@echo "Build finished. The XML files are in $(BUILDDIR)/xml."
 
 .PHONY: pseudoxml
 pseudoxml:
+	$(SPHINXAPIDOC) -o $(BUILDDIR)/generated ..
 	$(SPHINXBUILD) -b pseudoxml $(ALLSPHINXOPTS) $(BUILDDIR)/pseudoxml
 	@echo
 	@echo "Build finished. The pseudo-XML files are in $(BUILDDIR)/pseudoxml."
 
 .PHONY: dummy
 dummy:
+	$(SPHINXAPIDOC) -o $(BUILDDIR)/generated ..
 	$(SPHINXBUILD) -b dummy $(ALLSPHINXOPTS) $(BUILDDIR)/dummy
 	@echo
 	@echo "Build finished. Dummy builder generates no files."
