Read /proc/sys/net/ipv4/ip_local_port_range
In order to investigate failing tests on travis-ci.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ cache:
       - ~/.ethash
       - ~/.bin
 before_install:
+- sudo cat /proc/sys/net/ipv4/ip_local_port_range
 - sudo add-apt-repository -y ppa:ethereum/ethereum
 - sudo apt-get update
 - sudo apt-get install -y ethereum
