--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ cache:
       - ~/.bin
 before_install:
 - sudo cat /proc/sys/net/ipv4/ip_local_port_range
+- sudo netstat -nltuwp
 - sudo add-apt-repository -y ppa:ethereum/ethereum
 - sudo apt-get update
 - sudo apt-get install -y ethereum
