splitted py.test executions

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,3 +4,15 @@ max-line-length = 99
 
 [pep8]
 max-line-length = 99
+
+[coverage:run]
+branch = True
+concurrency = gevent
+
+[coverage:report]
+skip_covered = True
+omit =
+    */.tox/*
+    */.pyenv/*
+    */tests/*
+    */site-packages/*
