splitted py.test executions

--- a/tox.ini
+++ b/tox.ini
@@ -8,10 +8,14 @@ usedevelop = True
 changedir = {toxinidir}/raiden
 deps =
     -rrequirements.txt
+    coverage==4.0
     pdbpp
 commands =
-    py.test --blockchain-type=tester --exitfirst --ignore tests/test_webui.py --ignore tests/integration {posargs}
-    py.test --blockchain-type=tester --exitfirst --ignore tests/test_webui.py tests/integration {posargs}
+    coverage erase
+    coverage run --append -m py.test --blockchain-type=tester --exitfirst --ignore tests/unit --ignore tests/integration tests/smart_contracts {posargs}
+    coverage run --append -m py.test --blockchain-type=tester --exitfirst --ignore tests/unit --ignore tests/smart_contracts tests/integration {posargs}
+    coverage run --append -m py.test --blockchain-type=tester --exitfirst --ignore tests/smart_contracts --ignore tests/integration tests/unit {posargs}
+    coverage report --omit */.tox/*,*/.pyenv/*,*/tests/*,*/site-packages/*
 
 [testenv]
 changedir = {toxinidir}/raiden
@@ -19,15 +23,11 @@ deps =
     -rrequirements.txt
     coverage==4.0
 commands =
-    py.test --exitfirst --ignore tests/test_webui.py --ignore tests/integration {posargs}
-    py.test --exitfirst --ignore tests/test_webui.py tests/integration {posargs}
-    coverage run --source raiden --branch -m py.test --ignore tests/test_webui.py {posargs}
-
-[testenv:coverage]
-basepython = python2.7
-skip_install = True
-deps = coverage==4.0
-commands = coverage report --show-missing
+    coverage erase
+    coverage run --append -m py.test --exitfirst --ignore tests/unit --ignore tests/integration tests/smart_contracts {posargs}
+    coverage run --append -m py.test --exitfirst --ignore tests/unit --ignore tests/smart_contracts tests/integration {posargs}
+    coverage run --append -m py.test --exitfirst --ignore tests/smart_contracts --ignore tests/integration tests/unit {posargs}
+    coverage report --omit */.tox/*,*/.pyenv/*,*/tests/*,*/site-packages/*
 
 [testenv:flake8]
 basepython = python2.7
