removed changedir directive from tox.ini
removed it because:
- commands couldnt read the setup.cfg file,
- autocomplete wouldn't make sense, since the posargs should not have
the ./raiden prefix

--- a/tox.ini
+++ b/tox.ini
@@ -5,35 +5,37 @@ envlist = py27,coverage,flake8
 envdir = devenv
 basepython = python2.7
 usedevelop = True
-changedir = {toxinidir}/raiden
 deps =
     -rrequirements.txt
-    coverage==4.0
+    coverage>=4.0
     pdbpp
 commands =
     coverage erase
-    coverage run --append -m py.test --blockchain-type=tester --exitfirst --ignore tests/unit --ignore tests/integration tests/smart_contracts {posargs}
-    coverage run --append -m py.test --blockchain-type=tester --exitfirst --ignore tests/unit --ignore tests/smart_contracts tests/integration {posargs}
-    coverage run --append -m py.test --blockchain-type=tester --exitfirst --ignore tests/smart_contracts --ignore tests/integration tests/unit {posargs}
-    coverage report --omit */.tox/*,*/.pyenv/*,*/tests/*,*/site-packages/*
+    coverage run --append -m py.test --blockchain-type=tester --exitfirst --ignore ./raiden/tests/unit --ignore ./raiden/tests/integration ./raiden/tests/smart_contracts {posargs}
+    coverage run --append -m py.test --blockchain-type=tester --exitfirst --ignore ./raiden/tests/unit --ignore ./raiden/tests/smart_contracts ./raiden/tests/integration {posargs}
+    coverage run --append -m py.test --blockchain-type=tester --exitfirst --ignore ./raiden/tests/smart_contracts --ignore ./raiden/tests/integration ./raiden/tests/unit {posargs}
 
 [testenv]
-changedir = {toxinidir}/raiden
 deps =
     -rrequirements.txt
-    coverage==4.0
+    coverage>=4.0
 commands =
     coverage erase
-    coverage run --append -m py.test --exitfirst --ignore tests/unit --ignore tests/integration tests/smart_contracts {posargs}
-    coverage run --append -m py.test --exitfirst --ignore tests/unit --ignore tests/smart_contracts tests/integration {posargs}
-    coverage run --append -m py.test --exitfirst --ignore tests/smart_contracts --ignore tests/integration tests/unit {posargs}
-    coverage report --omit */.tox/*,*/.pyenv/*,*/tests/*,*/site-packages/*
+    coverage run --append -m py.test --exitfirst --ignore ./raidentests/unit --ignore ./raidentests/integration ./raidentests/smart_contracts {posargs}
+    coverage run --append -m py.test --exitfirst --ignore ./raidentests/unit --ignore ./raidentests/smart_contracts ./raidentests/integration {posargs}
+    coverage run --append -m py.test --exitfirst --ignore ./raidentests/smart_contracts --ignore ./raidentests/integration ./raidentests/unit {posargs}
 
 [testenv:flake8]
 basepython = python2.7
 skip_install = True
-deps = flake8==2.4.1
+deps = flake8>=2.4.1
 commands = flake8 raiden
+
+[testenv:coverage]
+basepython = python2.7
+skip_install = True
+deps = coverage>=4.0
+commands = coverage report --show-missing
 
 [flake8]
 max-line-length = 99
