--- a/tox.ini
+++ b/tox.ini
@@ -5,30 +5,26 @@ envlist = py27,coverage
 envdir = devenv
 basepython = python2.7
 usedevelop = True
-changedir = {toxinidir}/raiden
 deps =
     -rrequirements.txt
-    coverage==4.0
+    coverage>=4.0
     pdbpp
     flake8
 commands =
     flake8 .
     coverage erase
-    coverage run --append -m py.test --blockchain-type=tester --exitfirst --ignore tests/unit --ignore tests/integration tests/smart_contracts {posargs}
-    coverage run --append -m py.test --blockchain-type=tester --exitfirst --ignore tests/unit --ignore tests/smart_contracts tests/integration {posargs}
-    coverage run --append -m py.test --blockchain-type=tester --exitfirst --ignore tests/smart_contracts --ignore tests/integration tests/unit {posargs}
-    coverage report --omit */.tox/*,*/.pyenv/*,*/tests/*,*/site-packages/*
+    coverage run --append -m py.test --blockchain-type=tester --exitfirst --ignore ./raiden/tests/unit --ignore ./raiden/tests/integration ./raiden/tests/smart_contracts {posargs}
+    coverage run --append -m py.test --blockchain-type=tester --exitfirst --ignore ./raiden/tests/unit --ignore ./raiden/tests/smart_contracts ./raiden/tests/integration {posargs}
+    coverage run --append -m py.test --blockchain-type=tester --exitfirst --ignore ./raiden/tests/smart_contracts --ignore ./raiden/tests/integration ./raiden/tests/unit {posargs}
 
 [testenv]
-changedir = {toxinidir}/raiden
 deps =
     -rrequirements.txt
-    coverage==4.0
     flake8
+    coverage>=4.0
 commands =
     flake8 .
     coverage erase
-    coverage run --append -m py.test --exitfirst --ignore tests/unit --ignore tests/integration tests/smart_contracts {posargs}
-    coverage run --append -m py.test --exitfirst --ignore tests/unit --ignore tests/smart_contracts tests/integration {posargs}
-    coverage run --append -m py.test --exitfirst --ignore tests/smart_contracts --ignore tests/integration tests/unit {posargs}
-    coverage report --omit */.tox/*,*/.pyenv/*,*/tests/*,*/site-packages/*
+    coverage run --append -m py.test --exitfirst --ignore ./raiden/tests/unit --ignore ./raiden/tests/integration ./raiden/tests/smart_contracts {posargs}
+    coverage run --append -m py.test --exitfirst --ignore ./raiden/tests/unit --ignore ./raiden/tests/smart_contracts ./raiden/tests/integration {posargs}
+    coverage run --append -m py.test --exitfirst --ignore ./raiden/tests/smart_contracts --ignore ./raiden/tests/integration ./raiden/tests/unit {posargs}
