--- a/tox.ini
+++ b/tox.ini
@@ -13,9 +13,9 @@ deps =
 commands =
     flake8 .
     coverage erase
-    coverage run --append -m py.test --blockchain-type=tester --exitfirst --ignore ./raiden/tests/unit --ignore ./raiden/tests/integration ./raiden/tests/smart_contracts {posargs}
-    coverage run --append -m py.test --blockchain-type=tester --exitfirst --ignore ./raiden/tests/unit --ignore ./raiden/tests/smart_contracts ./raiden/tests/integration {posargs}
-    coverage run --append -m py.test --blockchain-type=tester --exitfirst --ignore ./raiden/tests/smart_contracts --ignore ./raiden/tests/integration ./raiden/tests/unit {posargs}
+    coverage run --append -m py.test --blockchain-type=tester --exitfirst ./raiden/tests/smart_contracts {posargs}
+    coverage run --append -m py.test --blockchain-type=tester --exitfirst ./raiden/tests/integration {posargs}
+    coverage run --append -m py.test --blockchain-type=tester --exitfirst ./raiden/tests/unit {posargs}
 
 [testenv]
 deps =
@@ -25,6 +25,6 @@ deps =
 commands =
     flake8 .
     coverage erase
-    coverage run --append -m py.test --exitfirst --ignore ./raiden/tests/unit --ignore ./raiden/tests/integration ./raiden/tests/smart_contracts {posargs}
-    coverage run --append -m py.test --exitfirst --ignore ./raiden/tests/unit --ignore ./raiden/tests/smart_contracts ./raiden/tests/integration {posargs}
-    coverage run --append -m py.test --exitfirst --ignore ./raiden/tests/smart_contracts --ignore ./raiden/tests/integration ./raiden/tests/unit {posargs}
+    coverage run --append -m py.test --exitfirst ./raiden/tests/smart_contracts {posargs}
+    coverage run --append -m py.test --exitfirst ./raiden/tests/integration {posargs}
+    coverage run --append -m py.test --exitfirst ./raiden/tests/unit {posargs}
