--- a/tox.ini
+++ b/tox.ini
@@ -11,9 +11,9 @@ deps =
     pdbpp
 commands =
     coverage erase
-    coverage run --append -m py.test --blockchain-type=tester --exitfirst --ignore ./raiden/tests/unit --ignore ./raiden/tests/integration ./raiden/tests/smart_contracts {posargs}
-    coverage run --append -m py.test --blockchain-type=tester --exitfirst --ignore ./raiden/tests/unit --ignore ./raiden/tests/smart_contracts ./raiden/tests/integration {posargs}
-    coverage run --append -m py.test --blockchain-type=tester --exitfirst --ignore ./raiden/tests/smart_contracts --ignore ./raiden/tests/integration ./raiden/tests/unit {posargs}
+    coverage run --append -m py.test --blockchain-type=tester --exitfirst ./raiden/tests/smart_contracts {posargs}
+    coverage run --append -m py.test --blockchain-type=tester --exitfirst ./raiden/tests/integration {posargs}
+    coverage run --append -m py.test --blockchain-type=tester --exitfirst ./raiden/tests/unit {posargs}
 
 [testenv]
 deps =
@@ -21,9 +21,9 @@ deps =
     coverage>=4.0
 commands =
     coverage erase
-    coverage run --append -m py.test --exitfirst --ignore ./raidentests/unit --ignore ./raidentests/integration ./raidentests/smart_contracts {posargs}
-    coverage run --append -m py.test --exitfirst --ignore ./raidentests/unit --ignore ./raidentests/smart_contracts ./raidentests/integration {posargs}
-    coverage run --append -m py.test --exitfirst --ignore ./raidentests/smart_contracts --ignore ./raidentests/integration ./raidentests/unit {posargs}
+    coverage run --append -m py.test --exitfirst ./raidentests/smart_contracts {posargs}
+    coverage run --append -m py.test --exitfirst ./raidentests/integration {posargs}
+    coverage run --append -m py.test --exitfirst ./raidentests/unit {posargs}
 
 [testenv:flake8]
 basepython = python2.7
