--- a/tox.ini
+++ b/tox.ini
@@ -9,13 +9,15 @@ deps =
     -rrequirements.txt
     coverage>=4.0
     pdbpp
-    flake8
-commands =
-    flake8 .
-    coverage erase
-    coverage run --append -m py.test --blockchain-type=tester --exitfirst ./raiden/tests/smart_contracts {posargs}
-    coverage run --append -m py.test --blockchain-type=tester --exitfirst ./raiden/tests/integration {posargs}
-    coverage run --append -m py.test --blockchain-type=tester --exitfirst ./raiden/tests/unit {posargs}
+
+[devenv:smart_contracts]
+commands = coverage run --append -m py.test --blockchain-type=tester --exitfirst ./raiden/tests/smart_contracts {posargs}
+
+[devenv:integration]
+commands = coverage run --append -m py.test --blockchain-type=tester --exitfirst ./raiden/tests/integration {posargs}
+
+[devenv:unit]
+commands = coverage run --append -m py.test --blockchain-type=tester --exitfirst ./raiden/tests/unit {posargs}
 
 [testenv]
 deps =
