tox: added working default for devenv

--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ deps =
     -rrequirements.txt
     coverage>=4.0
     pdbpp
+commands = coverage run --append -m py.test --blockchain-type=tester --exitfirst {posargs:./raiden/}
 
 [devenv:smart_contracts]
 commands = coverage run --append -m py.test --blockchain-type=tester --exitfirst ./raiden/tests/smart_contracts {posargs}
