Move flake8 out of default tox command

--- a/tox.ini
+++ b/tox.ini
@@ -20,13 +20,17 @@ commands = coverage run --append -m py.test --blockchain-type=tester --exitfirst
 [devenv:unit]
 commands = coverage run --append -m py.test --blockchain-type=tester --exitfirst ./raiden/tests/unit {posargs}
 
+[testenv:flake8]
+deps =
+    flake8
+commands=
+    flake8  --exit-zero raiden/ tools/
+
 [testenv]
 deps =
     -rrequirements.txt
-    flake8
     coverage>=4.0
 commands =
-    flake8 .
     coverage erase
     coverage run --append -m py.test --exitfirst ./raiden/tests/smart_contracts {posargs}
     coverage run --append -m py.test --exitfirst ./raiden/tests/integration {posargs}
