--- a/tools/ansible/run-scenario.yaml
+++ b/tools/ansible/run-scenario.yaml
@@ -70,6 +70,7 @@
       file:
         path: "{{ user_home }}/state"
         state: absent
+      ignore_errors: yes
 
     - name: create state directory
       file:
@@ -82,12 +83,7 @@
         state: absent
       with_items:
         - "{{ raiden_ports }}"
-
-    # TODO: create directory, get timestamp, save adding timestamp to bak name
-    #- name: backup old raiden log files
-    #  command: "mv -f {{ user_home }}/raiden-{{ item }}.log {{ user_home }}/raiden-{{ item }}.bak"
-    #  with_items:
-    #    - "{{ raiden_ports }}"
+      ignore_errors: yes
 
     - name: update repository if asked (set `-e force_pull=True`)
       shell:
@@ -97,25 +93,18 @@
 
     - name: execute raidens asynchronously
       shell:
-        cmd: "{{ ansible_env.HOME }}/raidenvenv/bin/python {{ scenario_runner }} $(cat {{ ansible_env.HOME }}/raiden_flags.txt) --privatekey $(cat {{ ansible_env.HOME }}/{{ item }}/privatekey.txt) --listen_address {{ ansible_ec2_local_ipv4 }}:{{ item }} --scenario {{ ansible_env.HOME }}/{{ item }}/scenario.json --logfile raiden-{{ item }}.log --stage_prefix=raiden-{{ item }}"
+        cmd: "{{ ansible_env.HOME }}/raidenvenv/bin/python {{ scenario_runner }} $(cat {{ ansible_env.HOME }}/raiden_flags.txt) --privatekey=$(cat {{ ansible_env.HOME }}/{{ item }}/privatekey.txt) --listen_address={{ ansible_ec2_local_ipv4 }}:{{ item }} --scenario={{ ansible_env.HOME }}/{{ item }}/scenario.json --logging=':WARNING' --logfile=raiden-{{ item }}.log --stage_prefix=raiden-{{ item }}"
         chdir: "{{ user_home }}"
       async: 1200
       poll: 0
       with_items:
         - "{{ raiden_ports }}"
 
-    # TODO: synchronizes a single host, check synchronizing multiple hosts...
-
     - name: wait for raidens initialization (this may take a long time...)
       wait_for:
         path: "{{ user_home }}/raiden-{{ item }}.stage1"
       with_items:
         - "{{ raiden_ports }}"
-
-    - name: publicize information that all nodes are ready
-      file: path="{{ user_home }}/state/{{ ansible_ec2_local_ipv4 }}.stage1" state=touch
-
-    # TODO: synchronize between states, and wait for all to be ready
 
     - name: signal all nodes to start sending messages
       shell:
@@ -125,6 +114,17 @@
     - name: wait for raidens to finish transfers
       wait_for:
         path: "{{ user_home }}/raiden-{{ item }}.stage2"
+      with_items:
+        - "{{ raiden_ports }}"
+
+    - name: signal all nodes to write results
+      shell:
+        cmd: "pgrep -a python | grep raiden | cut -d' ' -f1 | xargs kill --signal=SIGUSR2"
+      ignore_errors: True
+
+    - name: wait for raidens to write results
+      wait_for:
+        path: "{{ user_home }}/raiden-{{ item }}.stage3"
       with_items:
         - "{{ raiden_ports }}"
 
