--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,10 @@ env:
     - TEST_TYPE='smart_contracts'
 
     - TEST_TYPE='integration' BLOCKCHAIN_TYPE='--blockchain-type=tester'
-    - TEST_TYPE='integration' BLOCKCHAIN_TYPE='--blockchain-type=geth'
+    # Temporarily remove --blockchain-type=geth tests from the CI since
+    # they take too much time. Around 40 mins to complete and they are
+    # a bottleneck to our workflow
+    # - TEST_TYPE='integration' BLOCKCHAIN_TYPE='--blockchain-type=geth'
 
 cache:
   pip: true
