Use ip+port for results file

--- a/tools/ansible/run-scenario.yaml
+++ b/tools/ansible/run-scenario.yaml
@@ -93,7 +93,7 @@
 
     - name: execute raidens asynchronously
       shell:
-        cmd: "{{ ansible_env.HOME }}/raidenvenv/bin/python {{ scenario_runner }} $(cat {{ ansible_env.HOME }}/raiden_flags.txt) --privatekey=$(cat {{ ansible_env.HOME }}/{{ item }}/privatekey.txt) --listen_address={{ ansible_ec2_local_ipv4 }}:{{ item }} --scenario={{ ansible_env.HOME }}/{{ item }}/scenario.json --logging=':WARNING' --logfile=raiden-{{ item }}.log --stage_prefix=raiden-{{ item }}"
+        cmd: "{{ ansible_env.HOME }}/raidenvenv/bin/python {{ scenario_runner }} $(cat {{ ansible_env.HOME }}/raiden_flags.txt) --privatekey=$(cat {{ ansible_env.HOME }}/{{ item }}/privatekey.txt) --listen_address={{ ansible_ec2_local_ipv4 }}:{{ item }} --scenario={{ ansible_env.HOME }}/{{ item }}/scenario.json --logging=':WARNING' --logfile=raiden-{{ item }}.log --stage_prefix=raiden-{{ item }} --results_filename={{ ansible_ec2_public_ipv4 }}-{{ item }}.json"
         chdir: "{{ user_home }}"
       async: 1200
       poll: 0
@@ -137,6 +137,9 @@
       shell:
         cmd: "killall geth"
       ignore_errors: True
+
+    # - name: TODO sync results files
+    #  sync:
 
 - hosts: tag_Name_Scenario
   name: terminate
