fixed tox.ini envs

--- a/tox.ini
+++ b/tox.ini
@@ -25,11 +25,11 @@ deps =
     pdbpp
 commands = coverage run --append -m py.test --blockchain-type=tester --exitfirst {posargs:./raiden/}
 
-[devenv:smart_contracts]
+[testenv:smart_contracts]
 commands = coverage run --append -m py.test --blockchain-type=tester --exitfirst ./raiden/tests/smart_contracts {posargs}
 
-[devenv:integration]
+[testenv:integration]
 commands = coverage run --append -m py.test --blockchain-type=tester --exitfirst ./raiden/tests/integration {posargs}
 
-[devenv:unit]
+[testenv:unit]
 commands = coverage run --append -m py.test --blockchain-type=tester --exitfirst ./raiden/tests/unit {posargs}
