--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ python:
 
 env:
   global:
-    - GETH_URL='https://github.com/ethereum/go-ethereum/releases/download/v1.4.18/geth-linux-amd64-1.4.18-ef9265d0.tar.gz'
-    - GETH_VERSION='1.4.18'
+    - GETH_URL='https://gethstore.blob.core.windows.net/builds/geth-linux-amd64-1.5.5-ff07d548.tar.gz'
+    - GETH_VERSION='1.5.5'
     - SOLC_URL='https://github.com/brainbot-com/solidity-static/releases/download/v0.4.4/solc'
     - SOLC_VERSION='0.4.4'
   matrix:
