--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ pytest>=3.0.4
 pytest-timeout
 pytest-random
 pysha3
-pyethapp>=1.5.0
+-e git+https://github.com/konradkonrad/pyethapp@71f940c6d287b98a35ef524f4c5e3c13d530bfc5#egg=pyethapp
 ipython<5.0.0
 rlp>=0.4.3
 secp256k1==0.12.1
