separated the developement requirements
Also pinned the version of these developement dependencies to their
current latest version.

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ before_install:
 install:
   - pip install -U pip wheel coveralls
   - pip install pytest-travis-fold
-  - pip install -r requirements.txt
+  - pip install -r requirements-dev.txt
 
 before_script:
   - ./.travis/make_dag.sh
