--- a/tox.ini
+++ b/tox.ini
@@ -3,8 +3,7 @@ envlist = py27,coverage
 
 [testenv]
 deps =
-    -rrequirements.txt
-    coverage>=4.0
+    -rrequirements-dev.txt
 commands =
     coverage erase
     coverage run --append -m py.test --exitfirst {posargs:./raiden/tests/unit ./raiden/tests/smart_contracts ./raiden/tests/integration}
@@ -20,9 +19,7 @@ envdir = devenv
 basepython = python2.7
 usedevelop = True
 deps =
-    -rrequirements.txt
-    coverage>=4.0
-    pdbpp
+    -rrequirements-dev.txt
 commands = coverage run --append -m py.test --blockchain-type=tester --exitfirst {posargs:./raiden/}
 
 [testenv:smart_contracts]
