MacOSX port resuse fix #314
- do not use a udp protocol for generating the genesis block, as this
will bind the port and the test itself cannot rebind.
- added the py.test command line argument to allow parallel tests to
start from different base ports.

--- a/tox.ini
+++ b/tox.ini
@@ -23,10 +23,10 @@ deps =
 commands = coverage run --append -m py.test --blockchain-type=tester --exitfirst {posargs:./raiden/}
 
 [testenv:smart_contracts]
-commands = coverage run --append -m py.test --blockchain-type=tester --exitfirst ./raiden/tests/smart_contracts {posargs}
+commands = coverage run --append -m py.test --initial-port=2000 --blockchain-type=tester --exitfirst ./raiden/tests/smart_contracts {posargs}
 
 [testenv:integration]
-commands = coverage run --append -m py.test --blockchain-type=tester --exitfirst ./raiden/tests/integration {posargs}
+commands = coverage run --append -m py.test --initial-port=3000 --blockchain-type=tester --exitfirst ./raiden/tests/integration {posargs}
 
 [testenv:unit]
-commands = coverage run --append -m py.test --blockchain-type=tester --exitfirst ./raiden/tests/unit {posargs}
+commands = coverage run --append -m py.test --initial-port=4000 --blockchain-type=tester --exitfirst ./raiden/tests/unit {posargs}
