--- a/raiden/webapp/package.json
+++ b/raiden/webapp/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "jquery": "^3.1.1"
+    "jquery": "^3.1.1",
+    "jquery-ui": "^1.12.1"
   }
 }
