--- a/raiden/webapp/package.json
+++ b/raiden/webapp/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "jquery": "^3.1.1",
-    "jquery-ui": "^1.12.1"
+    "jquery-ui": "^1.12.1",
+    "jquery.tabulator": "^2.9.0"
   }
 }
