Fix RLP dependency version error to work around issue ethereum/pyethereum#412

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ pysha3
 # temporary until https://github.com/ethereum/pyethapp/pull/184 comes upstream (see also setup.py)
 -e git+https://github.com/konradkonrad/pyethapp@71f940c6d287b98a35ef524f4c5e3c13d530bfc5#egg=pyethapp
 ipython<5.0.0
-rlp>=0.4.3
+rlp>=0.4.3<=0.4.6
 secp256k1==0.12.1
 pycryptodome>=3.4.3
 miniupnpc
