--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,16 @@
 pysha3
 # temporary until https://github.com/ethereum/pyethapp/pull/184 comes upstream (see also setup.py)
--e git+https://github.com/konradkonrad/pyethapp@71f940c6d287b98a35ef524f4c5e3c13d530bfc5#egg=pyethapp
+#-e git+https://github.com/konradkonrad/pyethapp@71f940c6d287b98a35ef524f4c5e3c13d530bfc5#egg=pyethapp
+# temporary until new version of pyethereum is released, that supports solc >= v0.4.9
+-e git+https://github.com/LefterisJP/pyethapp@d1c9f39313d1facd54ee2a27d0ff6e8550ae2d64#egg=pyethapp
 ipython<5.0.0
 rlp>=0.4.3,<=0.4.6
 secp256k1==0.12.1
 pycryptodome>=3.4.3
 miniupnpc
 networkx
-ethereum>=1.3.2
+# temporary until new version of pyethereum is released, that supports solc >= v0.4.9
+-e git+https://github.com/LefterisJP/pyethereum@43d184ee74df1caaf5f4ffd06343938db3839005#egg=ethereum
 ethereum-serpent
 repoze.lru
 gevent-websocket==0.9.4
