api_test_server is now function scoped
Also switched to a much simpler usage of grequests

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ deps =
     -rrequirements-dev.txt
 commands =
     coverage erase
-    pytest --cov-append --exitfirst {posargs:./raiden/tests/unit ./raiden/tests/smart_contracts ./raiden/tests/integration}
+    pytest --cov-append --exitfirst {posargs:./raiden/tests/unit ./raiden/tests/smart_contracts ./raiden/tests/api ./raiden/tests/integration}
 
 [testenv:flake8]
 deps =
