Add API tests to Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,8 @@ env:
 
     - TEST_TYPE='integration' BLOCKCHAIN_TYPE='--blockchain-type=tester'
     - TEST_TYPE='integration' BLOCKCHAIN_TYPE='--blockchain-type=geth --blockchain-cache'
+    - TEST_TYPE='api' BLOCKCHAIN_TYPE='--blockchain-type=tester'
+    - TEST_TYPE='api' BLOCKCHAIN_TYPE='--blockchain-type=geth --blockchain-cache'
 
 cache:
   pip: true
