--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@
 pysha3
 # temporary until new version of pyethereum is released, that supports solc >= v0.4.9
 -e git+https://github.com/LefterisJP/pyethapp@use_new_solc_combinedjson_key#egg=pyethapp
+# temporary until pystun creates a new release
+git+https://github.com/konradkonrad/pystun@develop#egg=pystun
 ipython<5.0.0
 rlp>=0.4.3
 coincurve==4.5.1
