--- a/raiden/raidenwebui/package.json
+++ b/raiden/raidenwebui/package.json
@@ -17,6 +17,7 @@
     "@angular/compiler": "^4.0.1",
     "@angular/compiler-cli": "^4.0.0",
     "@angular/core": "^4.0.1",
+    "@angular/flex-layout": "^2.0.0-beta.7",
     "@angular/forms": "^4.0.1",
     "@angular/http": "^4.0.1",
     "@angular/material": "^2.0.0-beta.3",
@@ -27,7 +28,7 @@
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
-    "ng2-materialize": "^1.3.1",
+    "jquery": "^3.2.1",
     "primeng": "^4.0.0-rc.2",
     "rxjs": "^5.3.0",
     "typescript": "^2.2.2",
@@ -38,6 +39,7 @@
     "@angular/cli": "1.0.0",
     "@angular/compiler-cli": "^4.0.1",
     "@types/jasmine": "2.5.47",
+    "@types/jquery": "^2.0.41",
     "@types/node": "~7.0.12",
     "codelyzer": "~2.1.1",
     "jasmine-core": "~2.5.2",
@@ -45,9 +47,9 @@
     "karma": "~1.6.0",
     "karma-chrome-launcher": "~2.0.0",
     "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.0.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-coverage-istanbul-reporter": "^1.0.0",
     "protractor": "~5.1.1",
     "ts-node": "~3.0.2",
     "tslint": "~5.1.0",
