Flake8 in raiden directory

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,9 @@
 [flake8]
-ignore = E731
+ignore = E731, E402
 max-line-length = 99
 
 [pep8]
+ignore = E731, E402
 max-line-length = 99
 
 [coverage:run]
