added api testenv

--- a/tox.ini
+++ b/tox.ini
@@ -30,3 +30,6 @@ commands = pytest --cov-append --initial-port=3000 --blockchain-type=tester --ex
 
 [testenv:unit]
 commands = pytest --cov-append --initial-port=4000 --blockchain-type=tester --exitfirst ./raiden/tests/unit {posargs}
+
+[testenv:api]
+commands = pytest --cov-append --initial-port=5000 --blockchain-type=tester --exitfirst ./raiden/tests/api {posargs}
