--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+# temporary (?) until pyelliptic maintainers make it compatible with openssl>=1.1
+-e git+https://github.com/LefterisJP/pyelliptic@make_compatible_with_openssl1_1#egg=pyelliptic
 pysha3
 # temporary until new version of pyethereum is released, that supports solc >= v0.4.9
 -e git+https://github.com/LefterisJP/pyethapp@use_new_solc_combinedjson_key#egg=pyethapp
