--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ before_install:
   - ./.travis/download_solc.sh
 
 install:
-  - pip install -U pip wheel coveralls
+  - pip install -U pip wheel coveralls "coverage<4.4"
   - pip install pytest-travis-fold
   - pip install flake8
   - pip install -r requirements-dev.txt
