Create separate test folder for long running tests
Also create a new entry in the travis matrix.

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,8 @@ env:
   matrix:
     - TEST_TYPE='unit'
     - TEST_TYPE='smart_contracts'
-
+    - TEST_TYPE='long_running' BLOCKCHAIN_TYPE='--blockchain-type=tester'
+    - TEST_TYPE='long_running' BLOCKCHAIN_TYPE='--blockchain-type=geth --blockchain-cache'
     - TEST_TYPE='integration' BLOCKCHAIN_TYPE='--blockchain-type=tester'
     - TEST_TYPE='integration' BLOCKCHAIN_TYPE='--blockchain-type=geth --blockchain-cache'
     - TEST_TYPE='api' BLOCKCHAIN_TYPE='--blockchain-type=tester'
