--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ install:
   - pip install -r requirements-dev.txt
 
 before_script:
-  - flake8 raiden/ tools/ --exclude */ansible/
+  - flake8 raiden/ tools/
   - ./.travis/make_dag.sh
 
 script:
