--- a/raiden/raidenwebui/package.json
+++ b/raiden/raidenwebui/package.json
@@ -17,9 +17,10 @@
     "@angular/compiler": "^4.0.2",
     "@angular/compiler-cli": "^4.0.2",
     "@angular/core": "^4.0.2",
+    "@angular/flex-layout": "^2.0.0-beta.8",
     "@angular/forms": "^4.0.2",
     "@angular/http": "^4.0.2",
-    "@angular/material": "^2.0.0-beta.3",
+    "@angular/material": "^2.0.0-beta.6",
     "@angular/platform-browser": "^4.0.2",
     "@angular/platform-browser-dynamic": "^4.0.2",
     "@angular/platform-server": "^4.0.2",
@@ -28,6 +29,7 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
+    "ng-sidebar": "^5.0.2",
     "primeng": "^4.0.0-rc.2",
     "rxjs": "^5.3.0",
     "typescript": "^2.2.2",
