--- a/raiden/raidenwebui/src/tsconfig.app.json
+++ b/raiden/raidenwebui/src/tsconfig.app.json
@@ -5,6 +5,7 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "noStrictGenericChecks": true,
     "target": "es5",
     "lib": [
       "es2016",
