Add smoketest module
This module contains functions to
- generate a smoketest_genesis configuration
- run a clique PoA geth node from such a genesis
- run certain assertions on a raiden node against the preconfigured
local raiden network
- store a smoketest_configuration at a known location in the project
source

This allows to add a `raiden smoketest` command that allows checking the
general sanity of a raiden installation, without the need for connecting
to a global ethereum blockchain. See issue #679.

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,6 @@ truffle/.bash_history
 
 # ignore node_modules
 raiden/raidenwebui/node_modules/
+
+# never check in the smoketest_config.json
+smoketest_config.json
