--- a/.travis.yml
+++ b/.travis.yml
@@ -39,9 +39,11 @@ install:
   - pip install pytest-travis-fold
   - pip install flake8
   - pip install -r requirements-dev.txt
+  - pip install .
 
 before_script:
   - flake8 raiden/ tools/
+  - raiden smoketest
   - ./.travis/make_dag.sh
 
 script:
