--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include README.md
 include requirements.txt
 include raiden/smart_contracts/*
+include raiden/smoketest_config.json
 prune raiden/tests
