[testnet] Fix raiden config

--- a/tools/testnet/files/dockerfiles/raiden/Dockerfile
+++ b/tools/testnet/files/dockerfiles/raiden/Dockerfile
@@ -7,7 +7,7 @@ RUN \
     rm -rf /var/lib/apt/lists/* && \
     curl -L -o /usr/bin/solc https://github.com/ethereum/solidity/releases/download/v0.4.13/solc-static-linux && \
     chmod +x /usr/bin/solc && \
-    git clone -b testnet_wip https://github.com/ulope/raiden.git /app && \
+    git clone https://github.com/raiden-network/raiden.git /app && \
     pip install -r /app/requirements.txt -e /app
 
 WORKDIR /app
