--- a/tools/testnet/roles/raiden/tasks/main.yml
+++ b/tools/testnet/roles/raiden/tasks/main.yml
@@ -24,3 +24,5 @@
       - "{{ keystore_address }}"
       - "--password-file"
       - "/root/.raiden/password"
+      - "--logging"
+      - ":debug"
