Move raidenwebui to ui/web, for better organization
Also, updated packages, for use of angular 4.3 features

--- a/raiden/ui/web/package.json
+++ b/raiden/ui/web/package.json
@@ -12,33 +12,34 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "4.2.5",
-    "@angular/common": "4.2.5",
-    "@angular/compiler": "4.2.5",
-    "@angular/core": "4.2.5",
+    "@angular/animations": "4.3.1",
+    "@angular/common": "4.3.1",
+    "@angular/compiler": "4.3.1",
+    "@angular/core": "4.3.1",
     "@angular/flex-layout": "2.0.0-beta.8",
-    "@angular/forms": "4.2.5",
-    "@angular/http": "4.2.5",
-    "@angular/platform-browser": "4.2.5",
-    "@angular/platform-browser-dynamic": "4.2.5",
-    "@angular/platform-server": "4.2.5",
-    "@angular/router": "4.2.5",
+    "@angular/forms": "4.3.1",
+    "@angular/http": "4.3.1",
+    "@angular/platform-browser": "4.3.1",
+    "@angular/platform-browser-dynamic": "4.3.1",
+    "@angular/platform-server": "4.3.1",
+    "@angular/router": "4.3.1",
     "bootstrap": "3.3.7",
     "core-js": "2.4.1",
     "font-awesome": "4.7.0",
     "jquery": "3.2.1",
     "ng-sidebar": "6.0.1",
-    "primeng": "4.1.0-rc.3",
+    "npm-check-updates": "^2.12.1",
+    "primeng": "4.1.1",
     "rxjs": "5.4.2",
-    "web3": "0.19.1",
-    "zone.js": "0.8.12"
+    "web3": "0.20.1",
+    "zone.js": "0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.2.0",
-    "@angular/compiler-cli": "4.2.5",
+    "@angular/cli": "1.2.1",
+    "@angular/compiler-cli": "4.3.1",
     "@types/jasmine": "2.5.53",
-    "@types/jquery": "3.2.6",
-    "@types/node": "8.0.8",
+    "@types/jquery": "3.2.9",
+    "@types/node": "8.0.14",
     "codelyzer": "3.1.2",
     "jasmine-core": "2.6.4",
     "jasmine-spec-reporter": "4.1.1",
@@ -51,6 +52,6 @@
     "protractor": "5.1.2",
     "ts-node": "3.2.0",
     "tslint": "5.5.0",
-    "typescript": "2.4.1"
+    "typescript": "2.4.2"
   }
 }
