Add /ui routes to webUI
Also, set baseHref and deployUrl for all resources from Angular project.

--- a/raiden/ui/web/package.json
+++ b/raiden/ui/web/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.config.json",
-    "build": "ng build",
+    "build:dev": "ng build",
+    "build:prod": "ng build --prod --aot",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
