--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ env:
   matrix:
     - TEST_TYPE='unit'
     - TEST_TYPE='smart_contracts'
+    - TEST_TYPE='property'
     - TEST_TYPE='long_running' BLOCKCHAIN_TYPE='--blockchain-type=tester'
     - TEST_TYPE='long_running' BLOCKCHAIN_TYPE='--blockchain-type=geth --blockchain-cache'
     - TEST_TYPE='integration' BLOCKCHAIN_TYPE='--blockchain-type=tester'
