--- a/raiden/ui/web/package.json
+++ b/raiden/ui/web/package.json
@@ -31,6 +31,7 @@
     "font-awesome": "4.7.0",
     "jquery": "3.2.1",
     "ng-sidebar": "6.0.1",
+    "ngx-clipboard": "8.0.3",
     "npm-check-updates": "^2.12.1",
     "primeng": "4.1.1",
     "rxjs": "5.4.2",
