Honor --eth-rpc-endpoint in webUI

--- a/raiden/ui/web/proxy.config.json
+++ b/raiden/ui/web/proxy.config.json
@@ -1,12 +1,13 @@
-[
-  {
-    "context": ["*/*"],
-    "target": "http://localhost:8545",
-    "secure": false
-  },
-  {
-    "context": ["*/api/*"],
+{
+  "/api": {
     "target": "http://localhost:5001",
-    "secure": false
+    "secure": false,
+    "loglevel": "debug"
+  },
+  "/web3": {
+    "target": "http://localhost:8545",
+    "secure": false,
+    "loglevel": "debug",
+    "pathRewrite": {"^/web3": ""}
   }
-]
+}
